# zenbot

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
zenbot/: app.py  zencyclopedia.py
