[tool.poetry]
name = "zenbot"
version = "1.0.0"
description = "The Zen of Python in Slack"
authors = ["Bence Nagy <bence@underyx.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
